--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,7 +1,8 @@
 body {
-	background-color: black;
-	color: white;
+	background-color: #000;
+	color: gray;
 	overflow: hidden;
+	z-index: 1;
 }
 
 .intro{
@@ -16,7 +17,6 @@ body {
 	width: 100%;
       height: 100%;
       position: fixed;
-      z-index: 1;
       top: 0;
       left: 0;
       overflow-x: hidden;
